add swagger 2.0 support
